--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="all-certificates">
           <div class="certificate-item">
             <div class="certificate-info">
-              <h1>Certificate 1</h1>
+              <h1>Certificate I</h1>
               <h2>Certificate Of Completion</h2>
               <p>
                 Sertifikat ini saya dapatakan ketika PKL (Praktik Kerja Lapangan) semasa Sekolah Tahun 2023
@@ -184,7 +184,7 @@
           </div>
           <div class="certificate-item">
             <div class="certificate-info">
-              <h1>Certificate 2</h1>
+              <h1>Certificate II</h1>
               <h2>Certificate Of Completion</h2>
               <p>
                 Sertifikat ini saya dapatkan setelah saya mahir menggunakan bahasa web Pemrograman yaitu HTML-CSS,
@@ -199,7 +199,7 @@
           </div>
           <div class="certificate-item">
             <div class="certificate-info">
-              <h1>Certificate 3</h1>
+              <h1>Certificate III</h1>
               <h2>Certificate Of Completion</h2>
               <p>
                 Sertifikat ke-3 saya ini yupp, yang dimana sertifikat ini saya dapatkan ketika saya mampu bekerja pada bidang Fron End Developer
@@ -216,11 +216,11 @@
           </div>
           <div class="certificate-item">
             <div class="certificate-info">
-              <h1>Certificate 4</h1>
+              <h1>Certificate IV</h1>
               <h2>Certificate Of Competency Assessment</h2>
               <p>
                 Sertifikat Uji Kompetensi, saya dapatkan ketika saya mau lulus sekolah SMK yang dimana salah satu syarat Lulusan Terbaik
-                dapat menyelesaikan tugas ujian yang diberikan yaitu (Ujian Kompetensi Keahlian). yaah seperti yang ada ketahui saya mendapatkan sertifikat ini
+                dapat menyelesaikan tugas ujian yang diberikan yaitu (Ujian Kompetensi Keahlian). yaah seperti yang anda ketahui saya mendapatkan sertifikat ini
                 dengan status Very Competent(Sangat Kompeten) yang dimana saya dapat menyelesaikan tugas ujian yang diberikan pada saya, 
                 yaitu membuat web aplikasi Pembayaran SPP (SPP Payment Application).
 
@@ -232,10 +232,10 @@
           </div>
           <div class="certificate-item">
             <div class="certificate-info">
-              <h1>Certificate 5</h1>
+              <h1>Certificate V</h1>
               <h2> Score List</h2>
               <p>
-                Daftar Nilai , hingga pada akhirnya saya mendapatkan Daftar Nilai selama saya menjadi anak PKL pada StartUp tempat saya bekerja, 
+                Daftar Nilai , hingga pada akhirnya saya mendapatkan Daftar Nilai selama saya PKL pada StartUp tempat saya bekerja, 
                 yang dimana daftar nilai ini sebagai bukti bahwa saya memiliki skill yang mumpuni untuk siap bekeraja sebagai Full Stack Developer.
               </p>
             </div>
@@ -297,7 +297,8 @@
     <section id="footer">
       <div class="footer container">
         <div class="brand">
-           <h1><span>The </span>Future <span>Of </span>Solution</h1>
+           <h1><span>The </span>Future 
+            <span>Of </span>Solution</h1>
         </div>
         
         <div class="social">
