update header & update footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <!-- Navbar -->
+    <!-- Halaman Navbar -->
     <section id="header">
       <div class="header container">
         <div class="nav-bar">
@@ -26,7 +26,6 @@
           </div>
           <div class="brand">
             <a href="#hero">
-              <!-- <h1><span>Moh.</span>IKHWAN <span>R</span>IZALDI</h1> -->
             </a>
           </div>
           <div class="nav-list">
@@ -46,17 +45,17 @@
     </section>
     <!-- End Navbar -->
 
-    <!-- Header Section  -->
+    <!-- Halaman Header (Isi Content Atas)  -->
     <section id="hero">
       <div class="hero container">
         <div>
           <h1>Haii, <span></span></h1>
           <h1>Welcome To <span></span></h1>
-          <a href="#certificates" type="button" class="cta">Portfolio</a>
+          <a href="#certificates" type="button" class="cta">My Portfolio</a>
         </div>
       </div>
     </section>
-    <!-- End Hero Section  -->
+    <!-- End Header   -->
 
     <section id="about">
       <div class="about container">
@@ -80,8 +79,7 @@
            <h2>4. PHP (HyperText PreProcessor) <span></span></h2>
            <h2>5. FrameWork PHP CodeIgniter 4 <span></span></h2>
            <h2>6. FrameWork BootStrap <span></span></h2>
-           <h2>7. FrameWork React JS <span></span></h2>
-           <h2>8. DataBase MySql <span></span></h2>
+           <h2>7. DataBase MySql <span></span></h2>
            <p>Dengan Dibuktikan Beberepa Sertifikat Penghargaan Yang Saya Dapatkan!</p> 
           </p>
           <a href="#" class="cta">Moh.Ikhwan Rizaldi</a>
@@ -89,7 +87,7 @@
       </div>
     </section>
 
-    <!-- Service Section -->
+    <!-- Halaman Service -->
     <section id="services">
       <div class="services container">
         <div class="service-top">
@@ -154,9 +152,9 @@
         </div>
       </div>
     </section>
-    <!-- End Service Section -->
+    <!-- End Service  -->
 
-    <!-- Certificates Section -->
+    <!-- Halaman Certificates -->
     <section id="certificates">
       <div class="certificates container">
         <div class="certificates">
@@ -246,9 +244,9 @@
         </div>
       </div>
     </section>
-    <!-- End Certificates Section -->
+    <!-- End Certificates -->
 
-    <!-- Contact Section -->
+    <!-- Halaman Contact -->
     <section id="contact">
       <div class="contact container">
         <div>
@@ -291,9 +289,9 @@
         </div>
       </div>
     </section>
-    <!-- End Contact Section -->
+    <!-- End Contact -->
 
-    <!-- Footer -->
+    <!-- Halaman Footer -->
     <section id="footer">
       <div class="footer container">
         <div class="brand">
@@ -320,6 +318,7 @@
       </div>
     </section>
     <!-- End Footer -->
+
     <script src="./index.js"></script>
   </body>
 </html>
